--- a/.gitignore
+++ b/.gitignore
@@ -188,5 +188,5 @@ cython_debug/
 #.idea/
 *.txt
 *.save
-Do Not Kill Me Jacob Extra/game/saves/navigation.json
-Do Not Kill Me Jacob Extra/game/saves/persistent
+Cafe-Of-The-Dead/game/saves/navigation.json
+Cafe-Of-The-Dead/game/saves/persistent
